# abcde

./: .env.template  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  startup.sh  testing.db
.github/workflows/: run-tests.yml
abcde/: __init__.py  config.py  language_parser.py  main.py  models.py  query_parser.py  sql_models.py  utils.py
tests/: conftest.py  test_api.py  test_query_parser.py
